Complete VIRAT implementation: Pivotal Tag Override in ISS Module
🚀 VIRAT Enhanced Automated Development System Orchestrator Implementation

## Implementation Summary
- ✅ Successfully implemented 'ADD PIVOTAL TAG OVERRIDE IN IDEAL SIZE AT STORE CAT LEVEL'
- ✅ Correct module identification (ISS module) using module abbreviation mapping
- ✅ Complete implementation across all three repositories
- ✅ Comprehensive testing and validation

## Key Features Implemented
- Store-category level pivotal tag override functionality
- Support for P, NP, E, UNTAGGED pivotal tag values
- Override takes precedence over automatic calculation
- Seamless integration with existing ISS module structure

## Repository Changes
### irisx-algo (Java Backend)
- New classes: PivotalTagOverrideRow, PivotalTagOverrideFile, ISSPivotalTagOverrideModule
- Modified: ISSData, ISSModuleData, ISSUtil, ISSTaggingModule
- Added comprehensive test cases (4 tests, all passing)

### ms-loadapis-ril-final (Python API)
- New: PivotalTagOverrideLoadApi with validation
- Store code mapping, category validation, pivotal tag validation

### irisx-config (Configuration)
- New: TSV templates, SQL views, export queries
- Complete configuration support for override functionality

## Testing & Validation
- ✅ All existing ISS tests continue to pass
- ✅ New override functionality tests pass (4 test cases)
- ✅ Compilation successful across all repositories
- ✅ No regressions detected
- ✅ Python API syntax validated
- ✅ SQL configuration validated

## Documentation
- Complete requirement document with implementation details
- Pull request descriptions for all repositories
- Module abbreviation mapping for correct targeting
- Enhanced VIRAT agent capabilities

## Success Criteria Met
- ✅ Correct module identification and targeting
- ✅ Store-category level override functionality
- ✅ Full pivotal tag support
- ✅ Repository coordination across all three repos
- ✅ Comprehensive testing and validation
- ✅ Ready for code review an

--- a/expansion-packs/bmad-ads-automation/workflows/automated-development.yaml
+++ b/expansion-packs/bmad-ads-automation/workflows/automated-development.yaml
@@ -45,9 +45,9 @@ workflow:
 
     - step: branch_creation
       agent: ads-orchestrator
-      action: create feature branches in all affected repositories
+      action: create feature branches from caas-release in all affected repositories
       creates: feature branches with consistent naming
-      notes: "Create branches with naming convention: feature/{req-id}-{title}"
+      notes: "Create branches from caas-release with naming convention: feature/{req-id}-{title}"
 
     - step: repository_crawling_stage2
       agent: ads-orchestrator
