Add comprehensive database operations to VIRAT implementation workflow
- database-operations.md: Complete task for handling all database operations
- Updated implementation-plan-tmpl.yaml: Added database_operations section with schema changes, view operations, sync operations, export operations, template queries, and configuration updates
- Updated virat.md: Added 6 new database operation commands (create-views, setup-sync, setup-export, create-template-queries, update-schema, update-db-config)
- Updated implement-requirement.md: Added Step 13 for comprehensive database operations before push
- Added critical error handling for database operations in LoadAPI changes
- database-operations-test.md: Complete test showing how database operations work with sample requirement

Database Operations Include:
- View Creation: Input/output SQL views for data structures
- Sync Operations: Data synchronization between repositories and database
- Export Operations: Multi-format data export with scheduling
- Template Queries: Reusable parameterized queries
- Schema Updates: Database schema modifications and migrations
- Configuration Updates: module_input.json, module_output.json, upload-files.json

This ensures that whenever LoadAPIs are created/modified, all corresponding database operations are automatically handled, making the implementation complete and production-ready.

--- a/expansion-packs/bmad-ads-automation/templates/implementation-plan-tmpl.yaml
+++ b/expansion-packs/bmad-ads-automation/templates/implementation-plan-tmpl.yaml
@@ -5,7 +5,7 @@ implementation_plan:
   requirement_id: "REQ-{id}"
   title: "{title}"
   description: "{description}"
-  
+
   # Repository Analysis
   repositories_affected:
     irisx-algo:
@@ -20,7 +20,7 @@ implementation_plan:
       modules: []
       files: []
       changes: []
-  
+
   # Pattern Analysis
   patterns_identified:
     structural: []
@@ -28,27 +28,27 @@ implementation_plan:
     data: []
     configuration: []
     validation: []
-  
+
   # Dependency Analysis
   shared_dependencies:
     abstract_classes: []
     constants: []
     utilities: []
     impact_assessment: []
-  
+
   # Implementation Strategy
   implementation_strategy:
     approach: ""
     templates_to_use: []
     patterns_to_follow: []
     validation_requirements: []
-  
+
   # Branch Management
   branch_management:
     branch_name: "feature/{req-id}-{title}"
     repositories: []
     existing_branches: []
-  
+
   # Code Changes
   code_changes:
     java:
@@ -66,33 +66,73 @@ implementation_plan:
       modified_templates: []
       new_views: []
       modified_views: []
-  
+
+  # Database Operations
+  database_operations:
+    schema_changes:
+      new_tables: []
+      modified_tables: []
+      new_columns: []
+      modified_columns: []
+      new_indexes: []
+      new_constraints: []
+
+    view_operations:
+      new_input_views: []
+      new_output_views: []
+      modified_views: []
+      view_dependencies: []
+
+    sync_operations:
+      new_sync_configs: []
+      modified_sync_configs: []
+      sync_triggers: []
+      sync_schedules: []
+
+    export_operations:
+      new_export_configs: []
+      modified_export_configs: []
+      export_formats: []
+      export_destinations: []
+
+    template_queries:
+      new_templates: []
+      modified_templates: []
+      template_parameters: []
+      template_usage: []
+
+    configuration_updates:
+      module_input_updates: []
+      module_output_updates: []
+      upload_files_updates: []
+      validation_rules_updates: []
+
   # Validation Plan
   validation_plan:
     unit_tests: []
     integration_tests: []
     validation_modules: []
     schema_validation: []
-  
+
   # Success Criteria
   success_criteria:
     functional: []
     performance: []
     quality: []
     usability: []
-  
+
   # Timeline
   timeline:
     analysis: "0-30 minutes"
     implementation: "30-90 minutes"
     validation: "90-120 minutes"
     documentation: "120 minutes"
-  
+
   # Risk Assessment
   risks:
     high: []
     medium: []
     low: []
-  
+
   # Notes
   notes: []
