🧪 ADD: Advanced Testing & Validation System
✨ NEW FEATURES:
- Added Advanced Testing & Validation phase to automated development workflow
- Created comprehensive advanced testing and validation task with minimal yet effective implementation
- Added 15+ advanced testing and validation commands to VIRAT agent
- Implemented intelligent test generation, advanced validation framework, and continuous quality assurance

🧪 ADVANCED TESTING & VALIDATION CAPABILITIES:
- Intelligent Test Generation: AI-generated tests, property-based testing, mutation testing, performance test generation
- Advanced Validation Framework: Multi-level validation, cross-repository validation, business logic validation, integration validation
- Continuous Quality Assurance: Real-time quality monitoring, automated code reviews, quality gates, quality metrics
- Post-Processing Integration: Runs after AI enhancement completion, not during development

🔧 SYSTEM INTEGRATION:
- Added advanced testing & validation phase to automated-development.yaml workflow
- Enhanced VIRAT agent with advanced testing and validation commands and capabilities
- Updated README with comprehensive advanced testing and validation documentation
- Created advanced-testing-validation.md task for implementation

🎯 KEY FEATURES:
- Minimal Yet Effective: Comprehensive testing and validation without disrupting existing flow
- Post-Processing: Runs after AI enhancement is complete, not during development
- Comprehensive Coverage: Multi-level validation and testing across all repositories
- Quality Assurance: Continuous monitoring and automated enforcement of quality standards
- Actionable Insights: Concrete recommendations for quality improvement

📈 IMPACT:
- Enhanced system testing and validation without disrupting existing workflow
- Added comprehensive test generation capabilities with AI patterns
- Improved validation framework with multi-level and cross-repository validation
- Enhanced quality assurance with continuous monitorin

--- a/expansion-packs/bmad-ads-automation/workflows/automated-development.yaml
+++ b/expansion-packs/bmad-ads-automation/workflows/automated-development.yaml
@@ -103,6 +103,22 @@ workflow:
           creates: pattern optimization recommendations and conflict resolution
           notes: "Provide AI-driven suggestions for better implementation approaches and conflict resolution"
 
+    - phase: advanced_testing_validation
+      agent: virat
+      steps:
+        - step: intelligent_test_generation
+          action: generate comprehensive tests based on implementation patterns
+          creates: AI-generated tests, property-based tests, and performance tests
+          notes: "Generate comprehensive tests using AI patterns, property-based testing, and performance test generation"
+        - step: advanced_validation_framework
+          action: perform multi-level validation across repositories
+          creates: comprehensive validation reports and quality metrics
+          notes: "Multi-level validation including syntax, semantics, performance, and cross-repository validation"
+        - step: continuous_quality_assurance
+          action: implement real-time quality monitoring and automated code reviews
+          creates: quality monitoring reports and automated code review results
+          notes: "Continuous quality monitoring with automated code reviews and quality gates"
+
   success_criteria:
     - All three repositories have feature branches created
     - All required code changes implemented following existing patterns
