📚 ADD: Advanced Documentation & Knowledge Management System
✨ NEW FEATURES:
- Added Advanced Documentation & Knowledge Management phase to automated development workflow
- Created comprehensive advanced documentation and knowledge management task
- Added 18+ advanced documentation and knowledge management commands to VIRAT agent
- Implemented intelligent documentation, knowledge management, and learning systems

📚 ADVANCED DOCUMENTATION & KNOWLEDGE MANAGEMENT CAPABILITIES:
- Intelligent Documentation: Auto-generated documentation, interactive documentation, version control, searchable knowledge base
- Knowledge Management: Pattern library, best practices database, expert knowledge capture, learning management
- Advanced Documentation Features: AI-assisted documentation generation, knowledge discovery, pattern examples
- Knowledge Sharing and Learning: Expert knowledge sharing, team learning system, continuous learning

🔧 SYSTEM INTEGRATION:
- Added advanced documentation & knowledge management phase to automated-development.yaml workflow
- Enhanced VIRAT agent with advanced documentation and knowledge management commands
- Updated README with comprehensive advanced documentation and knowledge management documentation
- Created advanced-documentation-knowledge-management.md task for implementation

🎯 KEY FEATURES:
- Minimal Yet Effective: Comprehensive documentation and knowledge management without disrupting existing flow
- Post-Processing: Runs after advanced testing and validation is complete
- Comprehensive Coverage: Complete documentation generation and knowledge management
- Knowledge Sharing: Enable knowledge sharing and learning across team members
- AI-Powered: AI-assisted documentation generation and knowledge discovery

--- a/expansion-packs/bmad-ads-automation/workflows/automated-development.yaml
+++ b/expansion-packs/bmad-ads-automation/workflows/automated-development.yaml
@@ -119,6 +119,22 @@ workflow:
           creates: quality monitoring reports and automated code review results
           notes: "Continuous quality monitoring with automated code reviews and quality gates"
 
+    - phase: advanced_documentation_knowledge_management
+      agent: virat
+      steps:
+        - step: intelligent_documentation
+          action: automatically generate comprehensive documentation with AI insights
+          creates: auto-generated documentation, interactive documentation, and version-controlled documentation
+          notes: "Generate comprehensive documentation with AI insights, interactive examples, and version control"
+        - step: knowledge_management
+          action: implement comprehensive knowledge management system
+          creates: pattern library, best practices database, expert knowledge capture, and learning management
+          notes: "Create comprehensive knowledge management with pattern library, best practices, expert knowledge, and learning management"
+        - step: searchable_knowledge_base
+          action: create searchable knowledge base with AI-powered search
+          creates: searchable knowledge base with AI-powered search capabilities
+          notes: "Create searchable knowledge base with AI-powered search for easy knowledge discovery and retrieval"
+
   success_criteria:
     - All three repositories have feature branches created
     - All required code changes implemented following existing patterns
