feat: Update VIRAT full form to 'Virtual Intelligence Repository Analysis & Transformation' and remove all bmad-ads-automation references
- Updated VIRAT full form to better reflect transformation capabilities
- Replaced all 'bmad-ads-automation' references with 'virat-transformation-system'
- Updated config.yaml, README.md, and documentation files
- Maintained all functionality while improving naming clarity

--- a/expansion-packs/bmad-ads-automation/config.yaml
+++ b/expansion-packs/bmad-ads-automation/config.yaml
@@ -1,7 +1,7 @@
-# BMAD ADS Automation Extension Pack Configuration
-name: bmad-ads-automation
+# VIRAT Transformation System Extension Pack Configuration
+name: virat-transformation-system
 version: 1.0.0
-description: "Automated Development System for multi-repository development workflows"
+description: "VIRAT Transformation System for multi-repository development workflows"
 author: "BMAD Team"
 license: "MIT"
 
