feat: Configure VIRAT to use release-optimized base branches
- Updated config.yaml to specify base branches for each repository:
  - irisx-algo: caas-release
  - ms-loadapis-ril-final: release-optimised
  - irisx-config: caas-release-fixed
- Enhanced VIRAT agent with repository base branch knowledge
- Updated repository structure reference with base branch strategy
- Added branch creation workflow documentation
- Ensures all feature branches are created from stable release branches

--- a/expansion-packs/bmad-ads-automation/config.yaml
+++ b/expansion-packs/bmad-ads-automation/config.yaml
@@ -5,11 +5,17 @@ description: "VIRAT Transformation System for multi-repository development workf
 author: "BMAD Team"
 license: "MIT"
 
-# Repository paths for the three interconnected repositories
+# Repository paths and base branches for the three interconnected repositories
 repositories:
-  irisx-algo: "/Users/viratbansal/IdeaProjects/irisx-algo"
-  ms-loadapis-ril-final: "/Users/viratbansal/IdeaProjects/ms-loadapis-ril-final"
-  irisx-config: "/Users/viratbansal/IdeaProjects/irisx-config"
+  irisx-algo:
+    path: "/Users/viratbansal/IdeaProjects/irisx-algo"
+    base_branch: "caas-release"
+  ms-loadapis-ril-final:
+    path: "/Users/viratbansal/IdeaProjects/ms-loadapis-ril-final"
+    base_branch: "release-optimised"
+  irisx-config:
+    path: "/Users/viratbansal/IdeaProjects/irisx-config"
+    base_branch: "caas-release-fixed"
 
 # Target completion time in hours
 target_completion_time: 2
