Rename VIRAT to VIRTUAL INTELLIGENT Repository ANALYSIS AND TRANSFORMATION, remove ADS references, and include BMAD personas directly in the pack
- Renamed expansion pack from bmad-ads-automation to bmad-repository-intelligence
- Updated VIRAT agent title to VIRTUAL INTELLIGENT Repository ANALYSIS AND TRANSFORMATION
- Removed all ADS references throughout the codebase
- Added personas directory with analyst, pm, dev, qa, and architect personas
- Updated all file paths and dependencies to use new pack name
- Updated config.yaml and README.md with new branding
- Renamed dist and web-bundles directories accordingly
- Updated agent references to use local personas instead of external BMAD ones
- Fixed YAML linting errors in template files

--- a/expansion-packs/bmad-repository-intelligence/config.yaml
+++ b/expansion-packs/bmad-repository-intelligence/config.yaml
@@ -1,7 +1,7 @@
-# BMAD ADS Automation Extension Pack Configuration
-name: bmad-ads-automation
+# BMAD Repository Intelligence Extension Pack Configuration
+name: bmad-repository-intelligence
 version: 1.0.0
-description: "Automated Development System for multi-repository development workflows"
+description: "VIRTUAL INTELLIGENT Repository ANALYSIS AND TRANSFORMATION for multi-repository development workflows"
 author: "BMAD Team"
 license: "MIT"
 
