--- a/expansion-packs/bmad-repository-intelligence/templates/error-recovery-tmpl.yaml
+++ b/expansion-packs/bmad-repository-intelligence/templates/error-recovery-tmpl.yaml
@@ -121,22 +121,22 @@ automatic_recovery:
     - "Try alternative authentication method"
     - "Use cached credentials if available"
     - "Fall back to local repository access"
-  
+
   invalid_configuration:
     - "Use default configuration values"
     - "Load from backup configuration"
     - "Generate new configuration from template"
-  
+
   code_generation_failed:
     - "Use alternative template"
     - "Generate basic code structure"
     - "Skip non-critical code generation"
-  
+
   validation_failed:
     - "Retry with relaxed validation rules"
     - "Use alternative validation approach"
     - "Skip non-critical validations"
-  
+
   system_error:
     - "Retry with reduced resource usage"
     - "Use alternative system approach"
@@ -150,28 +150,28 @@ user_guided_recovery:
       - "Verify network connectivity"
       - "Test repository access manually"
       - "Update configuration if needed"
-  
+
   invalid_configuration:
     steps:
       - "Review configuration file syntax"
       - "Check required fields and values"
       - "Validate against schema"
       - "Update configuration file"
-  
+
   code_generation_failed:
     steps:
       - "Check template file existence"
       - "Validate template syntax"
       - "Verify template variables"
       - "Update template or configuration"
-  
+
   validation_failed:
     steps:
       - "Review validation error details"
       - "Check generated code"
       - "Verify validation rules"
       - "Update code or validation rules"
-  
+
   system_error:
     steps:
       - "Check system resources"
@@ -199,12 +199,12 @@ error_analytics:
     resolution_time: "Average time to resolve errors"
     success_rate: "Percentage of successful error resolutions"
     user_satisfaction: "User feedback on error handling"
-  
+
   reports:
     daily: "Daily error summary report"
     weekly: "Weekly error trend analysis"
     monthly: "Monthly error pattern analysis"
-  
+
   alerts:
     high_error_rate: "Alert when error rate exceeds threshold"
     resolution_timeout: "Alert when resolution takes too long"
@@ -220,14 +220,14 @@ error_documentation:
     resolution: "Step-by-step resolution guide"
     prevention: "How to prevent the error"
     examples: "Real-world examples"
-  
+
   categories:
     repository_errors: "Repository access and operation errors"
     configuration_errors: "Configuration file and setup errors"
     implementation_errors: "Code generation and implementation errors"
     validation_errors: "Validation and testing errors"
     system_errors: "System and resource errors"
-  
+
   maintenance:
     update_frequency: "Monthly"
     review_process: "Quarterly review and update"
@@ -254,51 +254,51 @@ error_example_1:
     - "[H] Get help with repository access"
 
 Documentation:
-- Repository Access Guide: https://docs.example.com/repo-access
-- Authentication Setup: https://docs.example.com/auth-setup
-- Permission Management: https://docs.example.com/permissions
+  - Repository Access Guide: https://docs.example.com/repo-access
+  - Authentication Setup: https://docs.example.com/auth-setup
+  - Permission Management: https://docs.example.com/permissions
 
 ### Example 2: Invalid Configuration
-❌ Error: Invalid Configuration
-=============================
-File: config/repositories.Context: Loading repository configuration
-Cause: Invalid YAML syntax at line 15
-Impact: Cannot load system configuration
+"❌ Error: Invalid Configuration":
+  separator: "============================="
+  file: "config/repositories"
+  context: "Loading repository configuration"
+  cause: "Invalid YAML syntax at line 15"
+  impact: "Cannot load system configuration"
+  suggested_actions:
+    - "Check YAML syntax in configuration file"
+    - "Validate indentation and structure"
+    - "Use configuration template as reference"
+  recovery_options:
+    - "[R] Retry with corrected configuration"
+    - "[S] Use default configuration"
+    - "[A] Abort operation"
+    - "[H] Get help with configuration"
 
-Suggested Actions:
-1. Check YAML syntax in configuration file
-2. Validate indentation and structure
-3. Use configuration template as reference
-
-Recovery Options:
-[R] Retry with corrected configuration
-[S] Use default configuration
-[A] Abort operation
-[H] Get help with configuration
-
-Documentation:
-- Configuration Guide: https://docs.example.com/config
-- YAML Syntax Reference: https://docs.example.com/- Configuration Templates: https://docs.example.com/templates
+  documentation:
+    - "Configuration Guide: https://docs.example.com/config"
+    - "YAML Syntax Reference: https://docs.example.com/yaml"
+    - "Configuration Templates: https://docs.example.com/templates"
 
 ### Example 3: Code Generation Failed
-❌ Error: Code Generation Failed
-==============================
-Context: Generating Java class for new module
-Cause: Template not found for module type 'CustomModule'
-Impact: Cannot generate required code files
+---
+"❌ Error: Code Generation Failed":
+  separator: "=============================="
+  context: "Generating Java class for new module"
+  cause: "Template not found for module type 'CustomModule'"
+  impact: "Cannot generate required code files"
+  suggested_actions:
+    - "Check if template exists for this module type"
+    - "Verify template path in configuration"
+    - "Create custom template if needed"
 
-Suggested Actions:
-1. Check if template exists for this module type
-2. Verify template path in configuration
-3. Create custom template if needed
+  recovery_options:
+    - "[R] Retry with different template"
+    - "[S] Skip code generation"
+    - "[A] Abort operation"
+    - "[H] Get help with templates"
 
-Recovery Options:
-[R] Retry with different template
-[S] Skip code generation
-[A] Abort operation
-[H] Get help with templates
-
-Documentation:
-- Template Guide: https://docs.example.com/templates
-- Template Syntax Reference: https://docs.example.com/template-syntax
-- Custom Template Creation: https://docs.example.com/custom-templates
+  documentation:
+    - "Template Guide: https://docs.example.com/templates"
+    - "Template Syntax Reference: https://docs.example.com/template-syntax"
+    - "Custom Template Creation: https://docs.example.com/custom-templates"
