Rename expansion pack to full form of VIRAT: bmad-virtual-intelligent-repository-analysis-transformation
- Renamed expansion pack directory from bmad-repository-intelligence to bmad-virtual-intelligent-repository-analysis-transformation
- Updated config.yaml with full VIRAT name
- Updated README.md with full expansion pack name
- Updated all IDE-FILE-RESOLUTION paths in agent files
- Renamed dist and web-bundles directories accordingly
- Renamed team files to match full VIRAT naming convention

--- a/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
+++ b/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
@@ -1,5 +1,5 @@
-# BMAD Repository Intelligence Extension Pack Configuration
-name: bmad-repository-intelligence
+# BMAD VIRTUAL INTELLIGENT Repository ANALYSIS AND TRANSFORMATION Extension Pack Configuration
+name: bmad-virtual-intelligent-repository-analysis-transformation
 version: 1.0.0
 description: "VIRTUAL INTELLIGENT Repository ANALYSIS AND TRANSFORMATION for multi-repository development workflows"
 author: "BMAD Team"
