Remove all hardcoded local paths from VIRAT expansion pack
SECURITY: Removed personal local paths from all files to ensure privacy

Files updated:
- config.yaml: Replaced hardcoded paths with {REPO_PATH} placeholders
- README.md: Updated repository path examples
- templates/configuration-tmpl.yaml: Replaced paths with placeholders
- tasks/crawl-repositories.md: Updated target directory references
- tasks/configuration-management.md: Fixed repository path configurations
- data/irisx-config-structure-analysis.md: Updated command examples

All paths now use placeholders:
- {ALGO_REPO_PATH} for irisx-algo repository
- {LOADAPIS_REPO_PATH} for ms-loadapis-ril-final repository
- {CONFIG_REPO_PATH} for irisx-config repository

These will be populated during installation via the 3 installation questions.

--- a/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
+++ b/expansion-packs/bmad-virtual-intelligent-repository-analysis-transformation/config.yaml
@@ -25,10 +25,11 @@ installation_questions:
     validate: "required"
 
 # Repository paths for the three interconnected repositories
+# These will be configured during installation via the questions above
 repositories:
-  irisx-algo: "/Users/viratbansal/IdeaProjects/irisx-algo"
-  ms-loadapis-ril-final: "/Users/viratbansal/IdeaProjects/ms-loadapis-ril-final"
-  irisx-config: "/Users/viratbansal/IdeaProjects/irisx-config"
+  irisx-algo: "{ALGO_REPO_PATH}"
+  ms-loadapis-ril-final: "{LOADAPIS_REPO_PATH}"
+  irisx-config: "{CONFIG_REPO_PATH}"
 
 # Target completion time in hours
 target_completion_time: 2
